new view layer causes crash #67605

Closed
opened 2019-07-24 19:17:54 +02:00 by bastien · 12 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro Vega 20 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-23 13:52, hash: b63f0266a0
Worked: (optional)

Short description of error
Blender crashes when clicking on "New view layer" button.

Exact steps for others to reproduce the error
When clicking on the new view layer button, blender crashes.
I can only reproduce that crash using a file where geometry is created through flip fluid addon.

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro Vega 20 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-23 13:52, hash: `b63f0266a0` Worked: (optional) **Short description of error** Blender crashes when clicking on "New view layer" button. **Exact steps for others to reproduce the error** When clicking on the new view layer button, blender crashes. I can only reproduce that crash using a file where geometry is created through flip fluid addon.
Author

Added subscriber: @bastien-2

Added subscriber: @bastien-2

Added subscriber: @dark999

Added subscriber: @dark999

i not have this issue when i press New View Layer on default scene on linux Blender 2.80-b63f0266a056 AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 430.34

you forgot to upload .blend file to replicate this issue
check if you hardware and OS work properly outside Blender use and it is full updated
can you try to replicate this issue after you press Load Factory Setting from File > Defaults?

i not have this issue when i press New View Layer on default scene on linux Blender 2.80-b63f0266a056 AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 430.34 you forgot to upload .blend file to replicate this issue check if you hardware and OS work properly outside Blender use and it is full updated can you try to replicate this issue after you press Load Factory Setting from File > Defaults?
Author

I narrowed a bit the issue. It is not a plugin (flip fluid) problem, it still happens with the plugin disabled.
It doesn't happen with another file.
It seems to be linked to a specific object: the cube just under the camera in the main collection.
Please find the file attached.
The crash happens also when triggering the viewport visibility of that cube. Once the cube deleted, I'm able to create a new view layer without crash.
Hardware is working well so far and is up to date.
The crash has been reproduced on another machine operating Windows as well.

socket9_liquid.blend

I narrowed a bit the issue. It is not a plugin (flip fluid) problem, it still happens with the plugin disabled. It doesn't happen with another file. It seems to be linked to a specific object: the cube just under the camera in the main collection. Please find the file attached. The crash happens also when triggering the viewport visibility of that cube. Once the cube deleted, I'm able to create a new view layer without crash. Hardware is working well so far and is up to date. The crash has been reproduced on another machine operating Windows as well. [socket9_liquid.blend](https://archive.blender.org/developer/F7627079/socket9_liquid.blend)

on opening socket9_liquid.blend i have a crash on linux Blender 2.80-b63f0266a056 AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 430.34

this is log T67605_socket9_liquid.crash.txt
i try to append scene from test file, when i change visibility of Cube in Collection Blender crash
blender.crash.txt

@bastien-2 can you simplify .blend file with only relate issue object? thank you

Next time you can use Help > Report a Bug item and striclty follow this form.
Attach a simple .blend file, before you made a bugreport you must search if bug/issue is already reported from others users

on opening socket9_liquid.blend i have a crash on linux Blender 2.80-b63f0266a056 AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 430.34 this is log [T67605_socket9_liquid.crash.txt](https://archive.blender.org/developer/F7627117/T67605_socket9_liquid.crash.txt) i try to append scene from test file, when i change visibility of Cube in Collection Blender crash [blender.crash.txt](https://archive.blender.org/developer/F7627199/blender.crash.txt) @bastien-2 can you simplify .blend file with only relate issue object? thank you Next time you can use Help > Report a Bug item and striclty follow this form. Attach a simple .blend file, before you made a bugreport you must search if bug/issue is already reported from others users
Author

alright. I simplified the file. there is only the cube in collection left.
blender crashes on toggling visibility of the cube, or creating new view layer (which i believe is a consequence of instancing that cube)

socket10_liquid.blend

thank you for your comments, i take note for next time.

alright. I simplified the file. there is only the cube in collection left. blender crashes on toggling visibility of the cube, or creating new view layer (which i believe is a consequence of instancing that cube) [socket10_liquid.blend](https://archive.blender.org/developer/F7627202/socket10_liquid.blend) thank you for your comments, i take note for next time.

Added subscriber: @GavinScott

Added subscriber: @GavinScott

The latest file crashes on open here.

The latest file crashes on open here.

Call stack:

blender.exe!BKE_mesh_calc_poly_normal(const MPoly * mpoly, const MLoop * loopstart, const MVert * mvarray, float * r_no) Line 2253 (g:\bdev\blender\source\blender\blenkernel\intern\mesh_evaluate.c:2253)
blender.exe!mesh_calc_normals_poly_cb(void * userdata, const int pidx, const ParallelRangeTLS * UNUSED_tls) Line 229 (g:\bdev\blender\source\blender\blenkernel\intern\mesh_evaluate.c:229)
blender.exe!parallel_range_func(TaskPool * pool, void * userdata_chunk, int thread_id) Line 1080 (g:\bdev\blender\source\blender\blenlib\intern\task.c:1080)
blender.exe!task_scheduler_thread_run(void * thread_p) Line 451 (g:\bdev\blender\source\blender\blenlib\intern\task.c:451)
blender.exe!__ptw32_threadStart() (Unknown Source:0)
blender.exe!invoke_thread_procedure(unsigned int(*)(void ) procedure, void * const context) Line 92 (c:\Users\Gavin\AppData\Local\Programs\Microsoft VS Code\minkernel\crts\ucrt\src\appcrt\startup\thread.cpp:92)
blender.exe!thread_start<unsigned int (__cdecl
)(void * __ptr64)>(void * const parameter) Line 115 (c:\Users\Gavin\AppData\Local\Programs\Microsoft VS Code\minkernel\crts\ucrt\src\appcrt\startup\thread.cpp:115)
kernel32.dll!00007fff8d214034() (Unknown Source:0)
ntdll.dll!00007fff8f8b3691() (Unknown Source:0)

Call stack: blender.exe!BKE_mesh_calc_poly_normal(const MPoly * mpoly, const MLoop * loopstart, const MVert * mvarray, float * r_no) Line 2253 (g:\bdev\blender\source\blender\blenkernel\intern\mesh_evaluate.c:2253) blender.exe!mesh_calc_normals_poly_cb(void * userdata, const int pidx, const ParallelRangeTLS * UNUSED_tls) Line 229 (g:\bdev\blender\source\blender\blenkernel\intern\mesh_evaluate.c:229) blender.exe!parallel_range_func(TaskPool * pool, void * userdata_chunk, int thread_id) Line 1080 (g:\bdev\blender\source\blender\blenlib\intern\task.c:1080) blender.exe!task_scheduler_thread_run(void * thread_p) Line 451 (g:\bdev\blender\source\blender\blenlib\intern\task.c:451) blender.exe!__ptw32_threadStart() (Unknown Source:0) blender.exe!invoke_thread_procedure(unsigned int(*)(void *) procedure, void * const context) Line 92 (c:\Users\Gavin\AppData\Local\Programs\Microsoft VS Code\minkernel\crts\ucrt\src\appcrt\startup\thread.cpp:92) blender.exe!thread_start<unsigned int (__cdecl*)(void * __ptr64)>(void * const parameter) Line 115 (c:\Users\Gavin\AppData\Local\Programs\Microsoft VS Code\minkernel\crts\ucrt\src\appcrt\startup\thread.cpp:115) kernel32.dll!00007fff8d214034() (Unknown Source:0) ntdll.dll!00007fff8f8b3691() (Unknown Source:0)
bastien changed title from niew view layer causes crash to new view layer causes crash 2019-07-25 05:19:06 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2019-07-25 05:26:13 +02:00

The mesh in this file is corrupt - it contains a mesh with negative loop-start.

Validating this mesh crashed, fixed 2e92791074.

Closing this report.

If you can re-create this error, this can be re-opened.

The mesh in this file is corrupt - it contains a mesh with negative loop-start. Validating this mesh crashed, fixed 2e92791074. Closing this report. If you can re-create this error, this can be re-opened.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67605
No description provided.