Fix crash validating mesh polygons with invalid loop-start

Add check for negative loop-start,
fixes crash validating test file from T67605.